--- a/demo/lib/css/default.css
+++ b/demo/lib/css/default.css
@@ -2,8 +2,17 @@
 * Core styles
 */
 
+/*
 .webmarks {
     position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    transition: opacity 100ms;
+}
+*/
+.webmarks {
+    position: absolute;
     top: 0;
     right: 0;
     bottom: 0;
