--- a/demo/lib/css/webmark.css
+++ b/demo/lib/css/webmark.css
@@ -26,3 +26,15 @@
 .thread-webmarks {
     background: #9e5253;
 }
+
+/*
+    article webmarks
+*/
+
+.article-webmark {
+    background: #dbbb5f;
+}
+
+.article-webmarks {
+    background: #423058;
+}
