--- a/demo/lib/css/content.css
+++ b/demo/lib/css/content.css
@@ -1,43 +1,99 @@
-.steps {
-    margin: 0 auto;
-    max-width: 350px;
-}
-
-.step {
-    padding: 5px;
-}
-
 .shapes {
     display: flex;
 }
 
+.rects {
+    width: 100%;
+    position: relative;
+    flex: 1;
+}
+
 .rect {
-    width: 200px;
     height: 10px;
 }
 
-.rect-x2 {
-    width: 290px;
-    height: 10px;
+.square, .square-x2 {
+    width: 100%;
 }
 
 .square {
-    width: 50px;
+    width: 100%;
     height: 50px;
+    flex: 0.2;
 }
 
 .square-x2 {
-    width: 290px;
     height: 200px;
 }
 
-.rect, .rect-x2, .square , .square-x2 {
-    margin: 10px 20px;
+.rect, .square , .square-x2 {
+    margin: 10px;
     background: #f1f1f1;
+}
+
+.body-line,
+.text-shape {
+    height: 10px;
 }
 
 .text-shape {
     background: #ccc;
-    height: 10px;
     margin: 10px;
+}
+
+.snippet {
+    background: #f1f1f1;
+    position: relative;
+    padding: 20px;
+}
+
+.snippet > .lines {
+    padding: 5px 20px;
+}
+
+.snippet > .lines > .line {
+    display: flex;
+    padding: 5px;
+}
+
+.snippet > .lines > .line:before {
+    content: '';
+    width: 10px;
+    height: 10px;
+    background: #dedede;
+    margin-right: 25px;
+}
+
+.snippet > .lines > .line > div {
+    margin: 0 3px;
+}
+
+.snippet > .lines > .line > .token,
+.snippet > .lines > .line > .keyword,
+.snippet > .lines > .line > .property {
+    height: 10px;
+}
+
+
+.snippet > .lines > .line > .token {
+    background: #7b7a7b;
+}
+
+.snippet > .lines > .line > .token-1 {
+    width: 50px;
+}
+
+.snippet > .lines > .line > .token-2 {
+    width: 30px;
+}
+
+.snippet > .lines > .line > .property {
+    width: 40px;
+    background: rgb(177, 177, 177);
+    margin-left: 40px;
+}
+
+.snippet > .lines > .line > .keyword-1 {
+    width: 100px;
+    background: #965555;
 }
