--- a/src/static/css/styles.css
+++ b/src/static/css/styles.css
@@ -24,32 +24,25 @@ body {
 }
 
 .hero > .container {
-    display: flex;
-}
-
-.hero .nav img {
-    height: 16px;
-    width: 16px;
+    display: block;
 }
 
 .hero > .container > .content {
-    padding: 5em;
+    padding: 0;
     flex: 2;
 }
 
-.hero .notebook {
+.notebook {
+    display: none;
     padding: 12em 0;
     margin-left: -5.3em;
-    margin-right: 5.3em;
     flex: 1;
-}
-
-.hero .notebook > img {
-    height: 20em;
 }
 
 .hero .logo {
     position: absolute;
+    display: none;
+    z-index: 2;
 }
 
 .hero .logo > img {
@@ -57,9 +50,9 @@ body {
 }
 
 .hero .text {
-    padding: 4em 0 .1em;
+    padding: 4em 2em 0;
+    text-align: center;
 }
-
 
 .hero .text > h1,
 .hero .text > h3 {
@@ -67,7 +60,7 @@ body {
 }
 
 .hero .text > h1 {
-    font-size: 4em;
+    font-size: 12vw;
     display: inline-block;
     position: relative;
     font-weight: 900;
@@ -85,40 +78,75 @@ body {
 
 .hero .text > h3 {
     padding: 1.2em 0;
-    font-size: 1.7em;
-    width: 17em;
+    font-size: 6vw;
+    max-width: 17em;
+}
+
+.hero .scroll-call {
+    text-align: center;
+    padding-bottom: 3em;
 }
 
 .hero .scroll-call > h3 {
     display: inline-block;
     padding: .4em 1.4em;
     text-transform: uppercase;
-    font-size: .9em;
+    font-size: 4vw;
     color: #7b7b7b;
     letter-spacing: .03em;
     border: 1px solid #7b7b7b;
 }
 
-.nav-wrapper {
-    display: flex;
-    align-items: center;
-}
-
 .nav a {
     text-decoration: none;
     color: #454545;
-    padding: 0 1.4em;
+    padding: .2em 1.4em;
 }
 
 .nav {
     background: rgb(255,218,217);
     background: linear-gradient(90deg, rgba(255,218,217,1) 0%, rgba(255,216,96,1) 100%);
-    width: 50vw;
-    height: 2em;
-    padding: .3em;
-    font-size: 1.3em;
+    font-size: 8vw;
     display: flex;
     justify-content: flex-end;
+    flex-direction: column;
+    padding: 1em;
+    position: relative;
+    z-index: 1;
+}
+
+.nav::after {
+    background: rgb(255,218,217);
+    background: linear-gradient(90deg, rgba(255,218,217,1) 0%, rgba(255,216,96,1) 100%);
+    content: '';
+    height: 2em;
+    position: absolute;
+    bottom: 57px;
+    left: -66px;
+    right: 0;
+    transform: rotate(-37deg);
+    z-index: -1;
+}
+
+.nav img {
+    display: none;
+    height: 16px;
+}
+
+.nav .github {
+    display: block;
+    position: relative;
+}
+
+.nav a.github::before {
+    content: 'MENU';
+    font-size: 4vw;
+    position: absolute;
+    top: -1.6em;
+}
+
+.nav .report {
+    display: none;
 }
 
 /*
@@ -154,7 +182,11 @@ body {
 }
 
 .demo > .text .sticky {
-    padding: 5.1em 2.5em;
+    padding: 4em 2em 0;
+}
+
+.demo > .text .sticky.first-sticky {
+    padding: 1em 2em;
 }
 
 .demo > .text h1,
@@ -163,12 +195,12 @@ body {
 }
 
 .demo > .text h1 {
-    font-size: 2.5em;
+    font-size: 11vw;
     line-height: 1em;
 }
 
 .demo > .text h3 {
-    font-size: 1em;
+    font-size: 6vw;
     margin-top: 1.57em;
     font-weight: 100;
 }
@@ -179,7 +211,7 @@ body {
 
 .steps {
     margin: 0 auto;
-    max-width: 84vmin;
+    max-width: 84vw;
 }
 
 .step {
@@ -320,12 +352,14 @@ body {
 }
 
 .big-title {
-    padding: 6em 4em 3em;
+    padding: 3em 0 .6em;
+    background: #fff;
+    text-align: center;
 }
 
 .big-title > h1,
 .big-title-2 > h1{
-    font-size: 3em;
+    font-size: 7vw;
     position: relative;
 }
 
@@ -344,9 +378,8 @@ body {
     height: .6em;
     position: absolute;
     bottom: 0;
-    right: -22px;
+    right: -8px;
     z-index: -1;
-
 }
 
 .big-title-2 {
@@ -433,9 +466,8 @@ footer .link-cards > .docs > hr {
 footer .credits-card {
     background: #fff;
     top: -100px;
-    height: 100px;
     position: relative;
-    padding: 2em;
+    padding: 2.5em;
     text-align: center;
 }
 
@@ -458,10 +490,134 @@ footer .cards-wrapper {
     margin: 0 auto;
 }
 
+@media only screen and (min-width: 400px) {
+    .nav {
+        font-size: 6vw;
+    }
+
+    .nav a.github::before {
+        font-size: 3vw;
+    }
+
+    .nav::after {
+        height: 4em;
+        bottom: 52px;
+        left: -62px;
+        left: -100px;
+        transform: rotate(-28deg);
+    }
+
+    .hero .text > h1 {
+        font-size: 10vw;
+    }
+
+    .hero .text > h3 {
+        font-size: 5vw;
+    }
+
+    .hero .scroll-call > h3 {
+        font-size: 3vw;
+    }
+
+}
 
 @media only screen and (min-width: 636px) {
+    .nav-wrapper {
+        display: flex;
+        align-items: center;
+        padding-top: 2em;
+    }
+
+    .nav {
+        padding: .3em;
+        width: 50vw;
+        height: 2em;
+        font-size: 1em;
+        font-size: 1.3em;
+        align-items: center;
+        flex: 1;
+    }
+
+    .nav::after {
+        content: none;
+    }
+
+    .nav img {
+        display: block;
+    }
+
+    .nav .github {
+        display: none;
+    }
+
+    .nav a {
+        padding: 0 1.4em;
+    }
+
+    .nav .report {
+        display: block;
+    }
+
+    .nav,
     .demo {
         flex-direction: row;
+    }
+
+    .hero > .container {
+        display: flex;
+    }
+
+    .hero .text {
+        padding: 4em 6em 0;
+        text-align: initial;
+    }
+
+    .hero .text > h1 {
+        font-size: 6vw;
+    }
+
+    .hero .text > h3 {
+        font-size: 3vw;
+    }
+
+    .hero .scroll-call {
+        text-align: initial;
+        padding: 0 6em 6em;
+    }
+
+    .hero .scroll-call > h3 {
+        font-size: .9em;
+    }
+
+    .hero > .container > .content {
+        padding: 2em;
+    }
+
+    .hero .logo {
+        display: block;
+    }
+ 
+    .notebook {
+        display: block;
+        margin-left: -6em;
+        position: absolute;
+    }
+
+    .notebook img {
+        height: 200px;
+    }
+
+    .big-title {
+        padding: 6em 4em 3em;
+        text-align: initial;
+    }
+
+    .big-title > h1:after {
+        right: -22px;
+    }
+
+    .big-title > h1 {
+        font-size: 3em;
     }
 
     .demo > .text {
@@ -480,12 +636,16 @@ footer .cards-wrapper {
         order: 2;
     }
 
+    .demo > .text .sticky {
+        padding: 5.1em 2.5em;
+    }
+
     .demo > .content {
         order: 1;
     }
 
     .steps {
-        max-width: 42vmax;
+        max-width: 42vw;
     }
 }
 
@@ -497,11 +657,57 @@ footer .cards-wrapper {
     .demo > .text h3 {
         font-size: 1.2em;
     }
+
+    .hero .text {
+        padding: 4em 12em 0;
+    }
+
+    .hero .scroll-call {
+        padding: 0 12em 6em;
+    }
+
+    .hero .text > h1 {
+        font-size: 4em;
+    }
+
+    .hero .text > h3 {
+        font-size: 1.7em;
+    }
+
+    .notebook img {
+        height: 220px;
+    }
 }
 
 @media only screen and (min-width: 1000px) {
+    .hero .text {
+        padding: 4em 0 .1em;
+    }
+
+    .hero > .container > .content {
+        padding: 5em;
+    }
+
+    .notebook {
+        position: relative;
+        margin: 0 -4em;
+        padding: 12em 0 6em;
+    }
+
+    .notebook img {
+        height: 250px;
+    }
+
+    .hero .scroll-call {
+        padding: 0;
+    }
+
+    .nav-wrapper {
+        padding: 0;
+    }
+
     .steps {
-        max-width: 28vmax;
+        max-width: 28vw;
     }
 }
 
@@ -513,4 +719,5 @@ footer .cards-wrapper {
     .demo > .text h3 {
         font-size: 1.8vw;
     }
+
 }
